# bell

./: .gitignore  README.md  add_command_skeleton.py  concat.py  generate_user_manual.py  lehrplantext_to_markdown.py  pyproject.toml
src/bell/: __init__.py
src/bell/commands/: init.py
src/bell/commands/add/: __init__.py  exam.py  grade.py  lesson.py  note.py  schedule.py  student.py
src/bell/commands/init/: __init__.py  class_.py  year.py
src/bell/commands/remove/: __init__.py  class_.py  exam.py  grade.py  lesson.py  student.py
src/bell/commands/show/: __init__.py  exams.py  grades.py  note.py  schedule.py  students.py  syllabus.py
src/bell/core/: class__.py  school_.py  year_.py
src/bell/core/add/: exam.py  grade.py  lesson.py  note.py  schedule.py  student.py
src/bell/core/init/: __init__.py  class_.py  school.py  year.py
src/bell/core/remove/: class_.py  exam.py  grade.py  lesson.py  student.py
src/bell/core/show/: exams.py  grades.py  note.py  schedule.py  students.py  syllabus.py
src/bell/res/syllabi/computer_science/: 09.md  10.md  11.md  11_spaet_beginnend.md  12.md  13.md  (+3 more)
src/bell/res/templates/: config_year.yaml  dotbell.yaml  grades.csv
src/bell/templates/: config_school.yaml  dotbell.yaml  year_overview.md
src/bell/types/cmd_args/: __init__.py  add.py  class_.py  date.py  init.py  student.py  year.py
src/bell/types/enums/: assignments.py  class_types.py  exam_types.py  subjects.py  weekdays.py
src/bell/utils/: clone_files.py  file_manager.py  validation.py
testschool/: config.yaml
testschool/2025-26/: config.yaml  overview.md
(+16 files in other folders)
