[project]
name = "bell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukaspodobnik", email = "lukas.podobnik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]

[project.scripts]
bell = "bell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bell"]